[package]
authors = ["Kevin Lewi <lewi.kevin.k@gmail.com>"]
categories = ["no-std", "algorithms", "cryptography"]
description = "An implementation of a verifiable oblivious pseudorandom function (VOPRF)"
edition = "2024"
keywords = ["oprf"]
license = "MIT"
name = "voprf"
readme = "README.md"
repository = "https://github.com/facebook/voprf/"
rust-version = "1.85"
version = "0.5.0"

[features]
alloc = []
danger = []
default = ["ristretto255-ciphersuite", "dep:serde"]
ristretto255 = ["dep:curve25519-dalek"]
ristretto255-ciphersuite = ["ristretto255", "dep:sha2"]
serde = ["hybrid-array/serde", "dep:serde"]
std = ["alloc"]

[dependencies]
curve25519-dalek = { version = "4", default-features = false, features = [
  "group",
  "rand_core",
  "zeroize",
], optional = true }
derive-where = { version = "1", features = ["zeroize-on-drop"] }
digest = "0.11.0-pre.10"
displaydoc = { version = "0.2", default-features = false }
elliptic-curve = { version = "0.14.0-rc.1", features = [
  "hash2curve",
  "sec1",
  "voprf",
] }
hybrid-array = "0.3"
rand_core = { version = "0.9", default-features = false }
serde = { version = "1", default-features = false, features = [
  "derive",
], optional = true }
sha2 = { version = "0.11.0-pre.5", default-features = false, optional = true }
subtle = { version = "2.3", default-features = false }
zeroize = { version = "1.5", default-features = false }

[dev-dependencies]
hex = "0.4"
p256 = { version = "0.14.0-pre.2", default-features = false, features = [
  "hash2curve",
  "voprf",
] }
p384 = { version = "0.14.0-pre.2", default-features = false, features = [
  "hash2curve",
  "voprf",
] }
p521 = { version = "0.14.0-pre.2", default-features = false, features = [
  "hash2curve",
  "voprf",
] }
proptest = "1"
rand = "0.9"
regex = "1"
serde_json = "1"
sha2 = "0.11.0-pre.5"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = []

[patch.crates-io]
crypto-bigint = { git = "https://github.com/RustCrypto/crypto-bigint.git", rev = "e97beae6593c30b4477b7f29e30e5372cd8204bf" }
curve25519-dalek = { git = "https://github.com/khonsulabs/curve25519-dalek", branch = "voprf" }
elliptic-curve = { git = "https://github.com/RustCrypto/traits", rev = "204a4e030fa98863429ccd3797e12f9e7c45dc33" }
ff = { git = "https://github.com/zkcrypto/ff", branch = "release-0.14.0" }
group = { git = "https://github.com/pinkforest/group", branch = "bump-rand-0.9" }
p256 = { git = "https://github.com/khonsulabs/elliptic-curves", branch = "ed448-voprf" }
p384 = { git = "https://github.com/khonsulabs/elliptic-curves", branch = "ed448-voprf" }
p521 = { git = "https://github.com/khonsulabs/elliptic-curves", branch = "ed448-voprf" }
proptest = { git = "https://github.com/daxpedda/proptest", branch = "rand-0.9" }
